fix dark mode button align

--- a/styles.css
+++ b/styles.css
@@ -165,7 +165,7 @@ hr{
 }
 
 .span3{
-	grid-column: 3 / 9;
+	grid-column: 3 / 6;
 	margin: 0 auto;
 }
 
